# libcow

./: BuildingWindows.txt  CMakeLists.txt
docs/: Doxyfile  main.doxy  mpegts-and-bt.tex
examples/: basic_example.cpp  multicast_example.cpp  on_demand_example.cpp  program_table_example.cpp
include/cow/: cow.hpp  cow_client.hpp  cow_client_worker.hpp  curl_instance.hpp  dispatcher.hpp  download_control.hpp  download_control_event_handler.hpp  download_control_worker.hpp  download_device.hpp  download_device_description.hpp  download_device_factory.hpp  download_device_manager.hpp  exceptions.hpp  libcow_def.hpp  libcow_types.hpp  multicast_server_connection.hpp  multicast_server_connection_factory.hpp  on_demand_server_connection.hpp  on_demand_server_connection_factory.hpp  piece_data.hpp  piece_request.hpp  program_info.hpp  program_sources.hpp  program_table.hpp  program_table_server_connection.hpp  progress_info.hpp  system.hpp
src/: cow_client.cpp  cow_client_worker.cpp  curl_instance.cpp  dispatcher.cpp  download_control.cpp  download_control_event_handler.cpp  download_control_worker.cpp  download_device.cpp  download_device_manager.cpp  download_handle.cpp  libcow_def.cpp  multicast_server_connection.cpp  multicast_server_connection_factory.cpp  on_demand_server_connection.cpp  on_demand_server_connection_factory.cpp  program_sources.cpp  program_table.cpp  program_table_server_connection.cpp  system.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
test/: curl_instance_tests.cpp  download_control_tests.cpp  download_device_tests.cpp  multicast_server_connection_tests.cpp
